# WepEmbedded

./: .gitignore  CMakeLists.txt  Readme.md  ring_buffer.cpp  ring_buffer.h  test_all.cpp  web_auth.cpp  web_auth.h  web_crypto.cpp  web_crypto.h
PC/: CMakeLists.txt  pc_auth.cpp  pc_frame.h  serial_port.cpp
PC/include/: pc_auth.h  pc_config.h  serial_port.h  wep_crypto.h
PC/src/: main.cpp  pc_frame.cpp  wep_crypto.cpp
